syntax = "proto3";

package tero.policy.v1;

import "google/api/annotations.proto";
import "opentelemetry/proto/common/v1/common.proto";
import "tero/policy/v1/log.proto";

option go_package = "github.com/usetero/policy/gen/go/tero/policy/v1";

// =============================================================================
// Policy Definition
// =============================================================================

// Policy represents a complete telemetry policy definition.
// Policies are designed to be:
// - Implementation Agnostic: Works in SDK, Collector, or any component
// - Standalone: No need to understand pipeline configuration
// - Dynamic: Can be updated post-instantiation
// - Idempotent: Safe to apply to multiple components
// - Fail-Open: Does not interfere with telemetry on failure
message Policy {
  // Unique identifier for this policy
  string id = 1;

  // Human-readable name
  string name = 2;

  // Optional description
  string description = 3;

  // Whether this policy is enabled
  bool enabled = 4;

  // Timestamp when this policy was created (Unix epoch nanoseconds)
  fixed64 created_at_unix_nano = 5;

  // Timestamp when this policy was last modified (Unix epoch nanoseconds)
  fixed64 modified_at_unix_nano = 6;

  // Labels for metadata and routing
  repeated opentelemetry.proto.common.v1.KeyValue labels = 7;

  // Target configuration. Exactly one must be set.
  oneof target {
    LogTarget log = 10;
    // MetricTarget metric = 11; // Reserved for future use
  }
}

// =============================================================================
// Policy Stages
// =============================================================================

// PolicyStage identifies the execution stage for a policy.
enum PolicyStage {
  POLICY_STAGE_UNSPECIFIED = 0;
  POLICY_STAGE_LOG_FILTER = 1; // Log filtering stage (keep/drop decisions)
  POLICY_STAGE_LOG_TRANSFORM = 2; // Log transformation stage (field modifications)
}

// =============================================================================
// Sync Protocol (for HTTP/gRPC Policy Providers)
// =============================================================================

// ClientMetadata contains information about the client requesting policies.
message ClientMetadata {
  // Policy stages this client supports
  repeated PolicyStage supported_policy_stages = 1;

  // Additional metadata labels
  // NOTE FOR TERO:
  // * workspace.id is required for usage.
  repeated opentelemetry.proto.common.v1.KeyValue labels = 2;

  // Resource attributes describing this client's identity
  // REQUIRED:
  // * service.instance.id
  // * service.name
  // * service.namespace
  // * service.version
  repeated opentelemetry.proto.common.v1.KeyValue resource_attributes = 3;
}

// TransformStageStatus reports hits and misses for a single transform stage.
message TransformStageStatus {
  // Number of times this stage was applied.
  int64 hits = 1;

  // Number of times this stage was evaluated but the field selected nothing.
  int64 misses = 2;
}

// PolicySyncStatus reports the status of an individual policy during sync.
// Used to communicate policy execution metrics and errors back to the provider.
message PolicySyncStatus {
  // The policy ID this status refers to.
  string id = 1;

  // Number of times this policy matched telemetry since the last sync.
  int64 match_hits = 2;

  // Number of times this policy was evaluated but did not match.
  int64 match_misses = 3;

  // Error messages encountered while applying this policy.
  repeated string errors = 4;

  // Transform stage statistics
  TransformStageStatus remove = 10;
  TransformStageStatus redact = 11;
  TransformStageStatus rename = 12;
  TransformStageStatus add = 13;
}

// SyncRequest is sent by clients to request policy updates.
message SyncRequest {
  // Client identification and capabilities
  ClientMetadata client_metadata = 1;

  // Request full sync (ignore policy_statuses)
  bool full_sync = 2;

  // Last sync timestamp (Unix epoch nanoseconds)
  fixed64 last_sync_timestamp_unix_nano = 3;

  // The hash of the policy list as last received by the client.
  string last_successful_hash = 4;

  // Status of individual policies within this set.
  repeated PolicySyncStatus policy_statuses = 5;
}

enum SyncType {
  SYNC_TYPE_UNSPECIFIED = 0;
  SYNC_TYPE_FULL = 1;

  // In the future we may support diffing with verbs here.
}

// SyncResponse contains policy updates for the client.
message SyncResponse {
  // The policies to sync
  repeated Policy policies = 1;

  // Hash of the entire list of policies (for change detection)
  string hash = 2;

  // Timestamp of this sync (Unix epoch nanoseconds)
  fixed64 sync_timestamp_unix_nano = 3;

  // Suggested interval before next sync (in seconds)
  uint32 recommended_sync_interval_seconds = 4;

  // Whether this is a full replacement or incremental update
  SyncType sync_type = 5;

  // Error message if sync failed
  string error_message = 6;
}

// =============================================================================
// Policy Provider Service (optional - for gRPC providers)
// =============================================================================

// PolicyService defines the gRPC service for policy providers.
service PolicyService {
  // Sync policies with the provider
  rpc Sync(SyncRequest) returns (SyncResponse) {
    option (google.api.http) = {
      post: "/v1/policy/sync"
      body: "*"
    };
  }
}
